KYLIN-669 update pom for OOM issue